# PetiteDrv

./: .gitignore  develope.md  modify_record.md  readme.md
Petite/: alloc.c  bus_i2c.c  bus_i2c.h  bus_lcd.c  bus_lcd.h  bus_spi.c  bus_spi.h  bus_uart.c  bus_uart.h  bus_vi2c.c  bus_vi2c.h  bus_vspi.c  bus_vspi.h  clib.c  font.c  font.h  font_6x12.c  font_8x16.c  font_8x8.c  list.c  log.c  log.h  maths.c  maths.h  p_kfifo.h  p_list.c  p_list.h  partition.c  partition.h  petie_def.h  petite.c  petite.h  petite_def.h  petite_dev.c  petite_dev.h  pfsm.c  pfsm.h  readme.md  stimer.c  stimer.h  (+3 more)
Petite/at/: readme.md
Petite/bus/: bus_i2c.c  bus_i2c.h  bus_lcd.c  bus_lcd.h  bus_spi.c  bus_spi.h  bus_uart.c  bus_uart.h  bus_vi2c.c  bus_vi2c.h  bus_vspi.c  bus_vspi.h
Petite/font/: conv.c  font.c  font.h  font_6x12.c  font_8x16.c  font_8x8.c  font_unicode.c  font_wjq.c  font_ymy.c  readme.md
Petite/mem/: alloc.c  alloc.h  p_kfifo.c  p_list.c  p_list.h  p_malloc.c  p_malloc.h  readme.md  tlsf.c
Utilities/FatFs/: ff_gen_drv.c
Utilities/Freetype/: freetype_src.c  freetype_test.c
Utilities/Helix/: assembly.h  polyphase.c  ref.txt  scalfact.c  subband.c
Utilities/cmd/: cmd.c  cmd_display.c  cmd_port.c  cmd_spiffs.c  cmd_sys.c  command.h  console.c  env.c  readme.txt
Utilities/littlefs-master/: lfs.c  lfs.h  lfs_util.h
Utilities/lvgl/: lvgl.h
Utilities/tslib/: readme.txt  tslib.c  tslib.h
app/: app.c  app.h  main.c  sys_littlefs.c  sys_spiffs.c
board/: readme.md
board/Albatross/: .cproject  .mxproject  .project  H750_cube_demo Debug.cfg  H750_cube_demo.ioc  H750_cube_demo.launch  STM32H750VBTX_FLASH.ld  STM32H750VBTX_RAM.ld  mx.scratch
board/canary/: board_canary.c  board_sysconf.c  board_sysconf.h  board_test.c  canary_main.c  canary_stm103.c  main.c  readme.md  stm32f10x_it.c
board/cuckoo/: Cuckoo_8m_V1.FLM  h7b0_mdk_demo.uvguix.Administrator  h7b0_mdk_demo.uvguix.Codef  h7b0_mdk_demo.uvoptx  h7b0_mdk_demo.uvprojx  readme.md
board/pochard/: FreeRTOSConfig.h  board.c  board_sysconf.c  board_sysconf.h  component_src.c  ffconf.h  main.c  main.h  petite_config.h  readme.md  stm32f407_hal_msp.c  stm32f4xx_it.c  sys_littlefs.c  sys_spiffs.c
board/pochard_gcc/: readme.md
board/pochard_gn_ninja/: .gn  BUILD.gn  readme.md
board/pochard_gn_ninja/components/: BUILD.gn
board/pochard_gn_ninja/core/: BUILD.gn  stm32f4xx.h  system_stm32f4xx.c
board/pochard_gn_ninja/driver/: BUILD.gn
board/pochard_gn_ninja/mcu/: BUILD.gn
board/pochard_gn_ninja/panel/: BUILD.gn
board/pochard_gn_ninja/petite/: BUILD.gn
board/pochard_gn_ninja/user/: BUILD.gn  board.c  board_sysconf.c  board_sysconf.h  component_src.c  main.c  main_test.c  petite_config.h  stm32f4xx_it.c
board/pochard_gn_ninja/user/freertos_port/: FreeRTOSConfig.h  port.c
board/pochard_gn_ninja/user/lvgl_porting/: lv_port_disp.c
board/pochard_gn_ninja/user/sdio_mmc/: board_sdio.c  board_sdio.h  stm324xg_eval_sdio_sd.c
board/wujique/: FreeRTOSConfig.h  board.c  board_sysconf.c  board_sysconf.h  board_test.c  main.c  petite_config.h  readme.md  sd_fat.c  stm32f407_hal_msp.c  stm32f4xx_it.c  wujique_main.c  wujique_test.c
components/: readme.md
components/CmBacktrace/: freertos config.md
components/FatFs/: ff_gen_drv.h
components/Freetype/: freetype_test.c  freetype备忘.md  ftdebug.c
components/Helix/: buffers.c  dqchan.c  huffman.c
components/Petitefont/: conv.c  font_6x12.c  font_8x16.c  font_8x8.c  font_asc_6x12.c  font_asc_8x16.c  font_unicode.c  font_wjq.c  font_ymy.c  gb18030.h  gb2312.h  petite_font.c  petite_font.h  readme.md
components/RTTViewer/: wjq_readme.md
components/asan/: McuASANconfig.h  readme.md
components/cmd/: cmd_config.h  cmd_display.c  cmd_port.c  cmd_spiffs.c  cmd_sys.c
components/emenu/: emenu.c  emenu.h  emenu_test.c
components/esp_hosted_fg/: esp_host_mdk_src.c
components/filesystem/: readme.md
components/lua-5.4.4/: demo.txt  lua_src.c
components/lvgl/: lvgl_src.c
components/mqtt/: readme.md
components/qfsm/: qfsm.c  qfsm.h
components/softtimer/: design a soft timer.md  lstimer.c  readme.md  slstimer.c  softtimer.c  softtimer.h
components/sqlite/: readme.md
components/tiny_ttf/: lv_tiny_ttf.c  lv_tiny_ttf.h  readme.txt
components/zint/: readme.txt
doc/: PetiteDrv软件设计说明.doc  develope.md
driver/: camera_api.c  camera_api.h  dev_buzzer.c  dev_dacsound.c  dev_esp8266.c  dev_key.c  dev_keypad.c  dev_keypad.h  dev_rf24l01.c  dev_rs485.c  dev_spiflash.c  dev_spiflash.h  dev_srf05.c  dev_tea5767.c  dev_touchkey.c  dev_touchscreen.c  dev_wm8978.c  dev_xpt2046.c  drv_buzzer.c  drv_buzzer.h  drv_config.h  drv_dacsound.c  drv_esp8266.c  drv_i2c_eeprom.c  drv_i2c_eeprom.h  drv_key.c  drv_key.h  drv_keypad.c  drv_keypad.h  drv_rf24l01.c  drv_rs485.c  drv_spiflash.c  drv_spiflash.h  drv_srf05.c  drv_tea5767.c  drv_touchkey.c  drv_touchkey.h  drv_touchscreen.c  drv_wm8978.c  drv_wm8978.h  (+2 more)
driver/camera/: camera_api.c  camera_api.h  drv_ov2640.c  drv_ov2640.h  drv_ov9655.c  drv_ov9655.h  ov5640.c  ov5640.h  ov5640af.c  ov5640cfg.c
driver/cdev/: dev_htu21d.c  dev_ptHCHO.c  drv_htu21d.c  drv_ptHCHO.c
driver/codec/: audio_pipeline.c  audio_pipeline.h  dacsound.c  dacsound.h  readme.md  wm8960.c
driver/lcd/: bus_lcd.c  bus_lcd.h  dev_IL3820.c  dev_IL91874.c  dev_ILI9325.c  dev_ILI9341.c  dev_lcd.c  dev_lcd.h  dev_st7735r.c  dev_st7789.c  dev_str7565.c  drv_IL3820.c  drv_IL91874.c  drv_ILI9325.c  drv_ILI9341.c  drv_lcd.c  drv_lcd.h  drv_nt35510.c  drv_nt35510.h  drv_r61408.c  drv_r61408.h  drv_st7735r.c  drv_st7789.c  drv_st7796u.c  drv_st7796u.h  drv_str7565.c
driver/sensor/: drv_ptHCHO.c
driver/sound/: audio_pipeline.c  dacsound.c  dacsound.h  wm8960.c  wm8978.c  wm8978.h
driver/touch/: drv_touchscreen.c  drv_touchscreen.h  touch.c  touch.h
driver/wifi/: readme.md
mcu/: mcu.h  readme.txt
mcu/stm32407/: mcu.h  stm32f4xx_it.c  system_stm32f4xx.c
mcu/stm32f103/: mcu.h  stm32f10x.h  system_stm32f10x.c
mcu/stm32h750vb/: mcu.h
panel/: audio_sample.c  display.c  display.h  emenu.c  emenu.h  emenu_test.c  readme.md  soundplay.c  soundplay.h
(+917 files in other folders)
