
COMPONENTS_SRC_PATH = "../../../components"

config("components_config") {
  include_dirs = [
      "$COMPONENTS_SRC_PATH/softtimer",
      "$COMPONENTS_SRC_PATH/RTTViewer/RTT",
      "$COMPONENTS_SRC_PATH/RTTViewer/Config",
      "$COMPONENTS_SRC_PATH/cmd/ubootcmd",
      "$COMPONENTS_SRC_PATH/CmBacktrace\cm_backtrace",
      "$COMPONENTS_SRC_PATH/lvgl",
      "$COMPONENTS_SRC_PATH/emenu",
      "$COMPONENTS_SRC_PATH/FlashDB\inc",
      "$COMPONENTS_SRC_PATH/FlashDB\porting",
      "$COMPONENTS_SRC_PATH/littlefs",
      "$COMPONENTS_SRC_PATH/FatFs",
      
      "$COMPONENTS_SRC_PATH/",

      "$COMPONENTS_SRC_PATH/FreeRTOS\Source\include",
      "$COMPONENTS_SRC_PATH/FreeRTOS\Source\CMSIS_RTOS_V2",
      "../user/lvgl_porting",
      "../user/freertos_port",
  ]
}
 
#配置一个编译.o集合的目标，与static_library的区别是该目标为虚拟打包，速度更快
source_set("source_components") {
  sources = [
    #base
    "$COMPONENTS_SRC_PATH/softtimer\softtimer.c",
    "$COMPONENTS_SRC_PATH/softtimer\lstimer.c", 
    #RTOS
    "$COMPONENTS_SRC_PATH/FreeRTOS\Source\portable\MemMang\heap_4.c",
    #RTT
    "$COMPONENTS_SRC_PATH/RTTViewer\RTT\SEGGER_RTT.c", 
    "$COMPONENTS_SRC_PATH/RTTViewer\RTT\SEGGER_RTT_printf.c",
    # back trace
    "$COMPONENTS_SRC_PATH/CmBacktrace\cm_backtrace\cm_backtrace.c",
    "$COMPONENTS_SRC_PATH/CmBacktrace\cm_backtrace\fault_handler\keil\cmb_fault.S",
    #cmd 
    "$COMPONENTS_SRC_PATH/cmd\cmd_display.c",
    "$COMPONENTS_SRC_PATH/cmd\cmd_port.c",
    "$COMPONENTS_SRC_PATH/cmd\cmd_sys.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\cmd.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\cmd_nvedit.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\commnad.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\console.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\env.c",
    "$COMPONENTS_SRC_PATH/cmd\ubootcmd\uif.c",

    #LVGL DEMO
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\lv_demo_benchmark.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\img_benchmark_cogwheel_alpha16.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\img_benchmark_cogwheel_argb.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\img_benchmark_cogwheel_chroma_keyed.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\img_benchmark_cogwheel_indexed16.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\img_benchmark_cogwheel_rgb.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\lv_font_bechmark_montserrat_12_compr_az.c.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\lv_font_bechmark_montserrat_16_compr_az.c.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\benchmark\assets\lv_font_bechmark_montserrat_28_compr_az.c.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\widgets\lv_demo_widgets.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\widgets\assets\img_clothes.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\widgets\assets\img_demo_widgets_avatar.c",
    "$COMPONENTS_SRC_PATH/lvgl\demos\widgets\assets\img_lvgl_logo.c",

    #LVGL CORE
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_disp.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_event.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_group.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_indev.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_indev_scroll.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_class.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_draw.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_pos.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_scroll.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_style.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_style_gen.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_obj_tree.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_refr.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\core\lv_theme.c",

    #LVGL DRAW
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_arc.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_img.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_label.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_line.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_mask.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_rect.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_draw_triangle.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_img_buf.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_img_cache.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\lv_img_decoder.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_arc.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_blend.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_img.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_letter.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_line.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_polygon.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_rect.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_gradient.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\draw\sw\lv_draw_sw_dither.c",
    #LVGL EXTRA
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\lv_extra.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\layouts\flex\lv_flex.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\layouts\grid\lv_grid.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\themes\basic\lv_theme_basic.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\themes\default\lv_theme_default.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\themes\mono\lv_theme_mono.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\animimg\lv_animimg.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\calendar\lv_calendar_header_arrow.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\calendar\lv_calendar_header_dropdown.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\chart\lv_chart.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\colorwheel\lv_colorwheel.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\imgbtn\lv_imgbtn.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\keyboard\lv_keyboard.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\led\lv_led.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\list\lv_list.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\menu\lv_menu.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\meter\lv_meter.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\msgbox\lv_msgbox.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\span\lv_span.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\spinbox\lv_spinbox.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\spinner\lv_spinner.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\tabview\lv_tabview.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\tileview\lv_tileview.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\win\lv_win.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\extra\widgets\calendar\lv_calendar.c",

    #LVGL FONT
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_dejavu_16_persian_hebrew.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_fmt_txt.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_loader.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_8.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_10.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_12.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_12_subpx.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_14.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_16.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_18.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_20.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_22.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_24.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_26.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_28.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_28_compressed.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_30.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_32.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_34.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_36.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_38.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_40.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_42.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_44.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_46.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_montserrat_48.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_simsun_16_cjk.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_unscii_8.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\font\lv_font_unscii_16.c",

    #LVGL HAL
    "$COMPONENTS_SRC_PATH/lvgl\src\hal\lv_hal_disp.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\hal\lv_hal_indev.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\hal\lv_hal_tick.c",

    #LVGL MISC
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_anim.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_anim_timeline.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_area.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_async.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_bidi.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_color.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_fs.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_gc.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_ll.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_log.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_lru.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_math.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_mem.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_printf.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_style.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_style_gen.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_templ.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_timer.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_tlsf.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_txt.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_txt_ap.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\misc\lv_utils.c",

    #LVGL 
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_arc.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_bar.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_btn.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_btnmatrix.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_canvas.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_checkbox.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_dropdown.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_img.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_label.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_line.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_objx_templ.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_roller.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_slider.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_switch.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_table.c",
    "$COMPONENTS_SRC_PATH/lvgl\src\widgets\lv_textarea.c",
    
  ]
  configs = [ 
      "//build/mcuconfig:stm32f407vgt6_conf",
      "//MCU:stm32f407_config",
  ]
  #配置默认包含config，即所有依赖于该lib的目标均会继承该config
  all_dependent_configs = [ ":components_config" ]
}