config("panel_config") {
  include_dirs = [
      "..\..\..\panel",

      "//USER/freertos_port",
      "..\..\..\components\FreeRTOS\Source\include",
      "..\..\..\components\FreeRTOS\Source\CMSIS_RTOS_V2",

      "..\..\..\components\Petitefont",

      "..\..\..\driver/codec",
      "..\..\..\driver/lcd",
  ]
}
 
#配置一个编译.o集合的目标，与static_library的区别是该目标为虚拟打包，速度更快
source_set("source_panel") {
  sources = [
    "..\..\..\panel\audio_sample.c",
    "..\..\..\panel\soundplay.c",
    "..\..\..\panel\display.c",
  ]
  
  configs = [ 
      "//build/mcuconfig:stm32f407vgt6_conf",
      "//MCU:stm32f407_config",
  ]
  #配置默认包含config，即所有依赖于该lib的目标均会继承该config
  all_dependent_configs = [ ":panel_config" ]
}